refactor: add camofox route modules
